added flexbox grid and css for it

--- a/home/index.html
+++ b/home/index.html
@@ -2,11 +2,49 @@
 <html>
 <head>
   <title>My first Vue page</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style.css?version=0.2">">
+  <link rel="stylesheet" href="css/flexbox-grid.css">
 </head>
 <body>
 
 <h1>Vue Example</h1>
+
+About Me<br>
+  Name: Marc Rene M. Ignacio
+  
+Education<br>
+  Senior Highschool Graduate
+
+Course<br>
+  Bachelor of Science in Information Technology
+
+Hobbies/Interests<br>
+  Baskletball, Movies, Cards
+
+Goals in Life<br>
+  To be financially free<br>
+
+<div class="container">
+  <div>About Me<br>
+  Name: Marc Rene M. Ignacio
+</div>
+
+  <div>Education<br>
+  Senior Highschool Graduate
+</div>
+
+  <div>Course<br>
+  Bachelor of Science in Information Technology
+</div>
+
+  <div>
+Hobbies/Interests<br>
+  Baskletball, Movies, Cards
+</div>
+
+  <div>Goals in Life<br>
+  To be financially free<br>
+</div>
 
 <p>The message is taken from 'data' inside the Vue instance by writing {{ message }} inside the div with id="app".</p>
 
